--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html {
+	height: -webkit-fill-available;
+}
+
 body {
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -12,6 +16,8 @@ code {
 }
 
 .routers-height {
-	height: calc(100vh - 61px);
+	/* safari polyfill */
+	min-height: calc(calc(var(--vh) * 100) - 61px);
+	/* height: calc(100vh - 61px); */
 	overflow-y: scroll;
 }
