--- a/src/styles/Chat.css
+++ b/src/styles/Chat.css
@@ -10,7 +10,8 @@
 }
 
 .chat-content {
-    height: calc(100vh - 66px - 77px);
+    /* safari polyfill */
+    height: calc(calc(var(--vh) * 100) - 66px - 77px);
     overflow-y: scroll;
     display: flex;
     flex-direction: column;
